--- a/package.json
+++ b/package.json
@@ -1,118 +1,298 @@
 {
 	"name": "Sample Theme",
 	"id": "sample-theme",
-	"author":"Marc Espín Sanz",
+	"author": "A cool guy",
 	"version": "1.0.0",
-	"description": "",
-	"license": "MIT",
+	"description": "Sample theme for Graviton Editor.",
 	"textTheme":"night",
 	"type":"theme",
 	"colorsScheme":{
-		"accentColor": "rgb(255, 0, 72)",
-		"textColor": "white",
-		"bodyBackground": "#222222",
-		"titlebarBackground": "#222222",
-		"menuBackground": "#333333",
-		"menuButtonBackground": "transparent",
-		"menuButtonHoveringBackground": "#333333",
-		"menuButtonText": "white",
-		"menuOptionHoveringBackground": "rgb(255, 0, 72)",
-		"menuButtonHoveringText": "white",
-		"menuOptionText": "white",
-		"menuOptionHoveringText": "white",
-		"menuDivider": "rgb(180,180,180)",
-		"controlButtonsFill": "white",
-		"controlButtonsHoverBackground": "rgb(60,60,60)",
-		"controlCloseButtonHoverBackground": "rgba(232,17,35)",
-		"controlCloseButtonHoverFill": "white",
-		"windowBackground": "#222222",
-		"windowIconsFill": "white",
-		"contextmenuBackground": "#333333",
-		"contextmenuButtonBackground": "#333333",
-		"contextmenuButtonText": "white",
-		"contextmenuButtonHoveringBackground": "rgb(255, 0, 72)",
-		"contextmenuButtonHoveringText": "white",
-		"contextmenuDivider": "rgb(180,180,180)",
-		"mainpanelBackground": "#191919",
-		"tabsbarBackground": "#222222",
-		"tabBackground": "transparent",
-		"tabText": "white",
-		"tabActiveText": "white",
-		"tabActiveBackground": "#191919",
-		"tabHoveringWhileDraggingBackground": "rgb(50,50,50)",
-		"scrollbarBackground": "rgba(0,0,0,0.4)",
-		"scrollbarHoverBackground": "rgba(0,0,0,0.7)",
-		"tabIconFill": "white",
-		"tabIconHoverFill": "gray",
-		"sidemenuBackground": "#191919",
-		"sidemenuButtonBackground": "transparent",
-		"sidemenuButtonHoverBackground": "#222222",
-		"sidemenuButtonActiveBackground": "rgb(255, 0, 72)",
-		"sidemenuButtonText": "white",
-		"sidemenuButtonActiveText": "white",
-		"sidemenuSearcherBackground": "#222222",
-		"sidemenuSearcherText": "white",
-		"explorerItemText": "white",
-		"explorerItemHoveringBackground": "rgba(150,150,150,0.6)",
-		"explorerItemSelectedBackground": "rgba(150,150,150,0.3)",
-		"explorerItemArrowBackground": "white",
-		"explorerItemGitModifiedText": "#5D9DFC",
-		"explorerItemGitModifiedIndicator": "#5D9DFC",
-		"explorerItemGitNotAddedIndicator": "#FFAB09",
-		"explorerItemGitIndicatorText": "white",
-		"cardBackground": "#191919",
-		"buttonBackground": "#191919",
-		"buttonImportantBackground": "rgb(255, 0, 72)",
-		"buttonImportantText": "white",
-		"radioBackgroundHovering": "rgb(60,60,60)",
-		"radioCircleBackground": "#222222",
-		"radioCircleBorder": "#666666",
-		"radioCircleBorderHovering": "#FE5E8B",
-		"windowBorder": "rgb(50,50,50)",
-		"fileNotSavedIndicator": "white",
-		"fileNotSavedIndicatorHovering": "rgb(255, 0, 72)",
-		"controlCloseButtonActiveBackground": "rgba(241,112,122)",
-		"controlCloseButtonActiveFill": "black",
-		"editorDialogBackground": "#333333",
-		"editorDialogText": "white",
-		"statusbarBackground": "#191919",
-		"statusbarBorder": "rgba(150,150,150)",
-		"statusbarItemBackground": "transparent",
-		"statusbarItemHoveringBackground": "rgb(60,60,60)",
-		"statusbarItemImportantBackground": "rgb(255, 0, 72)",
-		"statusbarItemImportantText": "white",
-		"statusbarItemText": "white",
-		"statusbarItemHoveringText": "white",
-		"statusbarItemIconBackground": "white",
-		"statusbarGitItemText": "white",
-		"statusbarGitItemModifiedText": "#FFAB09",
-		"inputBackground": "transparent",
-		"inputText": "white",
-		"splashScreenText": "white",
-		"splashScreenBackground": "#191919",
-		"commandPromptInputBackground": "#191919",
-		"commandPromptInputText": "white",
-		"commandPromptInputBorder": "rgb(255, 0, 72)",
-		"commandPromptBackground": "#333333",
-		"commandPromptOptionBackground": "#333333",
-		"commandPromptOptionActiveBackground": "rgb(255, 0, 72)",
-		"commandPromptOptionText": "white",
-		"commandPromptOptionActiveText": "white",
-		"notificationBackground": "#333333",
-		"notificationTitleText": "white",
-		"notificationContentText": "white",
-		"notificationButtonBackground": "#272727",
-		"panelBorder": "rgba(50,50,50)",
-		"switchBackground": "rgb(60,60,60)",
-		"switchIndicatorActivatedBackground": "rgb(255, 0, 72)",
-		"switchIndicatorDesactivatedBackground": "rgb(220,200,200)",
-		"loaderBackground": "white",
-		"sidebarIconsFill": "rgb(195,195,195)",
-		"sidebarIconsActiveFill": "rgb(235,235,235)",
-		"sidebarIconsHoveringFill": "rgb(195,195,195)",
-		"sidebarIconBackground": "transparent",
-		"sidebarIconHoveringBackground": "rgb(40,40,40)",
-		"sidebarIconActiveBackground": "rgb(50,50,50)",
-		"sidebarBackground": "#191919"
+		"accent": {
+			"Color": "rgb(255, 0, 72)"
+		},
+		"text": {
+			"Color": "white"
+		},
+		"body": {
+			"Background": "#222222"
+		},
+		"titlebar": {
+			"Background": "#222222"
+		},
+		"menu": {
+			"Background": "#333333",
+			"Button": {
+				"Background": "transparent",
+				"Hovering": {
+					"Background": "#333333",
+					"Text": "white"
+				},
+				"Text": "white"
+			},
+			"Option": {
+				"Hovering": {
+					"Background": "rgb(255, 0, 72)",
+					"Text": "white"
+				},
+				"Text": "white"
+			},
+			"Divider": "rgb(180,180,180)"
+		},
+		"control": {
+			"Buttons": {
+				"Fill": "white",
+				"Hovering": {
+					"Background": "rgb(60,60,60)"
+				}
+			},
+			"Close": {
+				"Button": {
+					"Hovering": {
+						"Background": "rgba(232,17,35)",
+						"Fill": "white"
+					},
+					"Active": {
+						"Background": "rgba(241,112,122)",
+						"Fill": "black"
+					}
+				}
+			}
+		},
+		"window": {
+			"Background": "#222222",
+			"Icons": {
+				"Fill": "white"
+			},
+			"Border": "rgb(50,50,50)"
+		},
+		"contextmenu": {
+			"Background": "#333333",
+			"Button": {
+				"Background": "#333333",
+				"Text": "white",
+				"Hovering": {
+					"Background": "rgb(255, 0, 72)",
+					"Text": "white"
+				}
+			},
+			"Divider": "rgb(180,180,180)"
+		},
+		"mainpanel": {
+			"Background": "#191919"
+		},
+		"tabsbar": {
+			"Background": "#222222"
+		},
+		"tab": {
+			"Background": "transparent",
+			"Text": "white",
+			"Active": {
+				"Text": "white",
+				"Background": "#191919"
+			},
+			"Hovering": {
+				"While": {
+					"Dragging": {
+						"Background": "rgb(50,50,50)"
+					}
+				}
+			},
+			"Icon": {
+				"Fill": "white",
+				"Hovering": {
+					"Fill": "gray"
+				}
+			}
+		},
+		"scrollbar": {
+			"Background": "rgba(0,0,0,0.4)",
+			"Hovering": {
+				"Background": "rgba(0,0,0,0.7)"
+			}
+		},
+		"sidemenu": {
+			"Background": "#191919",
+			"Button": {
+				"Background": "transparent",
+				"Hovering": {
+					"Background": "#222222"
+				},
+				"Active": {
+					"Background": "rgb(255, 0, 72)",
+					"Text": "white"
+				},
+				"Text": "white"
+			},
+			"Searcher": {
+				"Background": "#222222",
+				"Text": "white"
+			}
+		},
+		"explorer": {
+			"Item": {
+				"Text": "white",
+				"Hovering": {
+					"Background": "rgba(150,150,150,0.6)"
+				},
+				"Selected": {
+					"Background": "rgba(150,150,150,0.3)"
+				},
+				"Arrow": {
+					"Background": "white"
+				},
+				"Git": {
+					"Modified": {
+						"Text": "#5D9DFC",
+						"Indicator": "#5D9DFC"
+					},
+					"Not": {
+						"Added": {
+							"Text": "#FFAB09",
+							"Indicator": "#FFAB09"
+						}
+					},
+					"Indicator": {
+						"Text": "white"
+					}
+				}
+			}
+		},
+		"card": {
+			"Background": "#191919"
+		},
+		"button": {
+			"Background": "#191919",
+			"Important": {
+				"Background": "rgb(255, 0, 72)",
+				"Text": "white"
+			}
+		},
+		"radio": {
+			"Background": {
+				"Hovering": "rgb(60,60,60)"
+			},
+			"Circle": {
+				"Background": "#222222",
+				"Border": "#666666"
+			}
+		},
+		"file": {
+			"Not": {
+				"Saved": {
+					"Indicator": "white"
+				}
+			}
+		},
+		"editor": {
+			"Dialog": {
+				"Background": "#333333",
+				"Text": "white"
+			}
+		},
+		"statusbar": {
+			"Background": "#191919",
+			"Border": "rgba(150,150,150)",
+			"Item": {
+				"Background": "transparent",
+				"Hovering": {
+					"Background": "rgb(60,60,60)",
+					"Text": "white"
+				},
+				"Important": {
+					"Background": "rgb(255, 0, 72)",
+					"Text": "white"
+				},
+				"Text": "white",
+				"Icon": {
+					"Background": "white"
+				}
+			},
+			"Git": {
+				"Item": {
+					"Text": "white",
+					"Modified": {
+						"Text": "#FFAB09"
+					}
+				}
+			}
+		},
+		"input": {
+			"Background": "transparent",
+			"Text": "white"
+		},
+		"splash": {
+			"Screen": {
+				"Text": "white",
+				"Background": "#191919"
+			}
+		},
+		"command": {
+			"Prompt": {
+				"Input": {
+					"Background": "#191919",
+					"Text": "white",
+					"Border": "rgb(255, 0, 72)"
+				},
+				"Background": "#333333",
+				"Option": {
+					"Background": "#333333",
+					"Active": {
+						"Background": "rgb(255, 0, 72)",
+						"Text": "white"
+					},
+					"Text": "white"
+				}
+			}
+		},
+		"notification": {
+			"Background": "#333333",
+			"Title": {
+				"Text": "white"
+			},
+			"Content": {
+				"Text": "white"
+			},
+			"Button": {
+				"Background": "#272727"
+			}
+		},
+		"panel": {
+			"Border": "rgba(50,50,50)"
+		},
+		"switch": {
+			"Background": "rgb(60,60,60)",
+			"Indicator": {
+				"Activated": {
+					"Background": "rgb(255, 0, 72)"
+				},
+				"Desactivated": {
+					"Background": "rgb(220,200,200)"
+				}
+			}
+		},
+		"loader": {
+			"Background": "white"
+		},
+		"sidebar": {
+			"Icons": {
+				"Fill": "rgb(195,195,195)",
+				"Active": {
+					"Fill": "rgb(235,235,235)"
+				},
+				"Hovering": {
+					"Fill": "rgb(195,195,195)"
+				}
+			},
+			"Icon": {
+				"Background": "transparent",
+				"Hovering": {
+					"Background": "rgb(40,40,40)"
+				},
+				"Active": {
+					"Background": "rgb(50,50,50)"
+				}
+			},
+			"Background": "#191919"
+		}
 	}
 }
