--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
 	"name": "Sample Theme",
 	"id": "sample-theme",
-	"author": "A cool guy",
+	"author": "A cool human",
 	"version": "1.0.0",
 	"description": "Sample theme for Graviton Editor.",
 	"textTheme":"night",
 	"type":"theme",
-	"colorsScheme":{
+	"colorsScheme": {
+		"terminal": {
+			"Background": "white",
+			"Foreground": "black",
+			"Selection": "rgb(180,180,180,0.6)",
+			"Cursor": "black"
+		},
 		"accent": {
-			"Color": "rgb(255, 0, 72)"
+			"Color": "#0066FF"
 		},
 		"text": {
-			"Color": "white"
+			"Color": "black",
+			"Focused": {
+				"Background": "rgba(150,150,150,0.4)"
+			}
 		},
 		"body": {
-			"Background": "#222222"
+			"Background": "rgb(238,238,238)"
 		},
 		"titlebar": {
-			"Background": "#222222"
+			"Background": "rgb(238,238,238)"
 		},
 		"menu": {
-			"Background": "#333333",
+			"Background": "white",
 			"Button": {
-				"Background": "transparent",
+				"Background": "rgb(238,238,238)",
 				"Hovering": {
-					"Background": "#333333",
-					"Text": "white"
+					"Background": "rgb(212,212,212)",
+					"Text": "black"
 				},
-				"Text": "white"
+				"Text": "black"
 			},
 			"Option": {
+				"Text": "black",
 				"Hovering": {
-					"Background": "rgb(255, 0, 72)",
+					"Background": "#0066FF",
 					"Text": "white"
-				},
-				"Text": "white"
+				}
 			},
-			"Divider": "rgb(180,180,180)"
+			"Divider": "rgb(212,212,212)"
 		},
 		"control": {
 			"Buttons": {
-				"Fill": "white",
+				"Fill": "black",
 				"Hovering": {
-					"Background": "rgb(60,60,60)"
+					"Background": "rgb(212,212,212)"
 				}
 			},
 			"Close": {
@@ -59,78 +68,79 @@
 			}
 		},
 		"window": {
-			"Background": "#222222",
+			"Background": "white",
 			"Icons": {
-				"Fill": "white"
+				"Fill": "rgb(40,40,40)"
 			},
-			"Border": "rgb(50,50,50)"
+			"Border": "rgb(170,170,170)"
 		},
 		"contextmenu": {
-			"Background": "#333333",
+			"Background": "white",
 			"Button": {
-				"Background": "#333333",
-				"Text": "white",
+				"Background": "white",
+				"Text": "black",
 				"Hovering": {
-					"Background": "rgb(255, 0, 72)",
+					"Background": "#0066FF",
 					"Text": "white"
 				}
 			},
-			"Divider": "rgb(180,180,180)"
+			"Divider": "rgb(212,212,212)"
 		},
 		"mainpanel": {
-			"Background": "#191919"
+			"Background": "white"
 		},
 		"tabsbar": {
-			"Background": "#222222"
+			"Background": "rgb(238,238,238)"
 		},
 		"tab": {
+			"Text": "black",
 			"Background": "transparent",
-			"Text": "white",
 			"Active": {
-				"Text": "white",
-				"Background": "#191919"
+				"Text": "black",
+				"Background": "white"
 			},
 			"Hovering": {
 				"While": {
 					"Dragging": {
-						"Background": "rgb(50,50,50)"
+						"Background": "rgb(250,250,250)"
 					}
 				}
 			},
 			"Icon": {
-				"Fill": "white",
+				"Fill": "black",
 				"Hovering": {
 					"Fill": "gray"
 				}
 			}
 		},
 		"scrollbar": {
-			"Background": "rgba(0,0,0,0.4)",
+			"Background": "rgba(0,0,0,0.2)",
 			"Hovering": {
-				"Background": "rgba(0,0,0,0.7)"
+				"Background": "rgba(0,0,0,0.5)"
 			}
 		},
 		"sidemenu": {
-			"Background": "#191919",
+			"Background": "rgb(238,238,238)",
 			"Button": {
 				"Background": "transparent",
 				"Hovering": {
-					"Background": "#222222"
+					"Background": "rgb(212,212,212)"
 				},
 				"Active": {
-					"Background": "rgb(255, 0, 72)",
+					"Background": "#0066FF",
 					"Text": "white"
 				},
-				"Text": "white"
+				"Text": "black"
 			},
 			"Searcher": {
-				"Background": "#222222",
-				"Text": "white"
+				"Background": "white",
+				"Text": "black",
+				"Border": "#CFCFCF"
 			}
 		},
 		"explorer": {
 			"Item": {
-				"Text": "white",
+				"Text": "black",
 				"Hovering": {
 					"Background": "rgba(150,150,150,0.6)"
 				},
@@ -138,17 +148,17 @@
 					"Background": "rgba(150,150,150,0.3)"
 				},
 				"Arrow": {
-					"Background": "white"
+					"Background": "#646464"
 				},
 				"Git": {
 					"Modified": {
-						"Text": "#5D9DFC",
-						"Indicator": "#5D9DFC"
+						"Text": "#9F00AD",
+						"Indicator": "#9F00AD"
 					},
 					"Not": {
 						"Added": {
-							"Text": "#FFAB09",
-							"Indicator": "#FFAB09"
+							"Text": "#0066FF",
+							"Indicator": "#0066FF"
 						}
 					},
 					"Indicator": {
@@ -158,49 +168,59 @@
 			}
 		},
 		"card": {
-			"Background": "#191919"
+			"Background": "rgb(238,238,238)"
 		},
 		"button": {
-			"Background": "#191919",
+			"Background": "rgb(238,238,238)",
 			"Important": {
-				"Background": "rgb(255, 0, 72)",
+				"Background": "#0066FF",
 				"Text": "white"
 			}
 		},
 		"radio": {
 			"Hovering": {
-				"Background": "rgb(60,60,60)"
+				"Background": "#EFEFEF"
 			},
 			"Circle": {
-				"Background": "#222222",
-				"Border": "#666666"
+				"Background": "white",
+				"Border": "#CFCFCF",
+				"Hovering": {
+					"Border": "#5D9DFC"
+				}
 			}
 		},
 		"file": {
 			"Not": {
 				"Saved": {
-					"Indicator": "white"
+					"Indicator": "black",
+					"Hovering": {
+						"Indicator": "#0066FF"
+					}
 				}
 			}
 		},
 		"editor": {
 			"Dialog": {
-				"Background": "#333333",
-				"Text": "white"
+				"Background": "white",
+				"Text": "black"
+			},
+			"Tooltip": {
+				"Background": "white",
+				"Text": "black"
 			}
 		},
 		"statusbar": {
-			"Background": "#191919",
-			"Border": "rgba(150,150,150)",
+			"Background": "#0066FF",
+			"Border": "white",
 			"Item": {
 				"Background": "transparent",
 				"Hovering": {
-					"Background": "rgb(60,60,60)",
+					"Background": "rgb(255,255,255,0.1)",
 					"Text": "white"
 				},
 				"Important": {
-					"Background": "rgb(255, 0, 72)",
-					"Text": "white"
+					"Background": "#FFAB09",
+					"Text": "black"
 				},
 				"Text": "white",
 				"Icon": {
@@ -211,88 +231,88 @@
 				"Item": {
 					"Text": "white",
 					"Modified": {
-						"Text": "#FFAB09"
+						"Text": "lightgray"
 					}
 				}
 			}
 		},
 		"input": {
 			"Background": "transparent",
-			"Text": "white"
+			"Text": "black",
+			"Border": "#CFCFCF"
 		},
 		"splash": {
 			"Screen": {
-				"Text": "white",
-				"Background": "#191919"
+				"Text": "black",
+				"Background": "white"
 			}
 		},
 		"command": {
 			"Prompt": {
 				"Input": {
-					"Background": "#191919",
-					"Text": "white",
-					"Border": "rgb(255, 0, 72)"
+					"Background": "white",
+					"Text": "black"
 				},
-				"Background": "#333333",
+				"Background": "rgb(238,238,238)",
 				"Option": {
-					"Background": "#333333",
+					"Background": "rgb(238,238,238)",
 					"Active": {
-						"Background": "rgb(255, 0, 72)",
+						"Background": "#0066FF",
 						"Text": "white"
 					},
-					"Text": "white"
+					"Text": "black"
 				}
 			}
 		},
 		"notification": {
-			"Background": "#333333",
+			"Background": "rgb(242,242,242)",
 			"Title": {
-				"Text": "white"
+				"Text": "black"
 			},
 			"Content": {
-				"Text": "white"
+				"Text": "black"
 			},
 			"Button": {
-				"Background": "#272727"
+				"Background": "rgb(220,220,220)"
 			}
 		},
 		"panel": {
-			"Border": "rgba(50,50,50)"
+			"Border": "rgba(180,180,180)"
 		},
 		"switch": {
-			"Background": "rgb(60,60,60)",
+			"Background": "rgb(220,220,220)",
 			"Indicator": {
 				"Activated": {
-					"Background": "rgb(255, 0, 72)"
+					"Background": "#0066FF"
 				},
 				"Desactivated": {
-					"Background": "rgb(220,200,200)"
+					"Background": "rgba(150,150,150,0.8)"
 				}
 			}
 		},
 		"loader": {
-			"Background": "white"
+			"Background": "black"
 		},
 		"sidebar": {
 			"Icons": {
-				"Fill": "rgb(195,195,195)",
+				"Fill": "rgb(90,90,90)",
 				"Active": {
-					"Fill": "rgb(235,235,235)"
+					"Fill": "rgb(50,50,50)"
 				},
 				"Hovering": {
-					"Fill": "rgb(195,195,195)"
+					"Fill": "rgb(90,90,90)"
 				}
 			},
 			"Icon": {
 				"Background": "transparent",
 				"Hovering": {
-					"Background": "rgb(40,40,40)"
+					"Background": "rgb(180,180,180)"
 				},
 				"Active": {
-					"Background": "rgb(50,50,50)"
+					"Background": "rgb(210,210,210)"
 				}
 			},
-			"Background": "#191919"
+			"Background": "white"
 		}
 	}
 }
